<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles section -->
    <string name="app_name">Drone Delivery</string>
    <string name="title_activity_food_menu">Menu</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_drone_status">Status</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_item">Food Information</string>
    <string name="title_activity_payment">Payment</string>
    <string name="action_settings">Settings</string>
    <string name="current_orders">Current Orders</string>

    <!-- Button text section -->
    <string name="about_button">About</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_order">Add to Order</string>
    <string name="buy">Buy</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="add_more">Add More</string>
    <string name="back">Back</string>
    <string name="combos">Combos</string>
    <string name="tacos">Tacos</string>
    <string name="burritos">Burritos</string>
    <string name="drinks">Drinks</string>
    <string name="specialties">Specialties</string>

    <!-- General text section -->
    <string name="estimated_time">Estimated Time: </string>
    <string name="drone_status">Drone Status: </string>
    <string name="idle">Idle</string>
    <string name="sample_estimated_time">Infinite</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="total">Total:</string>
    <string name="item_image_content_description">Item Image</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="title_activity_drone_finder">Drone Finder</string>

</resources>
