<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Purple"
    tools:context="com.mealsoffwheels.dronedelivery.DroneStatusActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drone_status"
        android:id="@+id/droneStatusText"
        android:textColor="@color/White"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estimated_time"
        android:textColor="@color/White"
        android:id="@+id/estimatedTimeText"
        android:layout_above="@+id/droneStatusText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sample_estimated_time"
        android:id="@+id/estimatedTimeValue"
        android:layout_above="@+id/droneStatusText"
        android:layout_toRightOf="@+id/spacer5"
        android:layout_toEndOf="@+id/spacer5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/idle"
        android:id="@+id/droneStatusValue"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/spacer6"
        android:layout_toEndOf="@+id/spacer6" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_above="@+id/droneStatusText"
        android:layout_alignTop="@+id/estimatedTimeText"
        android:layout_toRightOf="@+id/estimatedTimeText"
        android:layout_toEndOf="@+id/estimatedTimeText"
        android:id="@+id/spacer5" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/estimatedTimeText"
        android:layout_alignParentBottom="true"
        android:id="@+id/spacer6"
        android:layout_alignTop="@+id/droneStatusValue"
        android:layout_alignLeft="@+id/spacer5"
        android:layout_alignStart="@+id/spacer5" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/googleMapLayout"
        android:layout_above="@+id/estimatedTimeText" />

</RelativeLayout>
