<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:focusable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Spacer -->
    <TextView
        android:id="@+id/MenuLayoutSpacer"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/OrdersButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_food_menu"
        android:id="@+id/MenuButton"
        android:background="@drawable/button_shape_right"

        android:textColor="#FFFFFF"

        android:shadowColor="#B3B3B3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="50sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/MenuLayoutSpacer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_order"
        android:id="@+id/OrdersButton"

        android:background="@drawable/button_shape_right"

        android:textColor="#FFFFFF"

        android:shadowColor="#B3B3B3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="50sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/OrderStatusSpacer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/OrderStatusSpacer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/StatusButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_drone_status"
        android:id="@+id/StatusButton"

        android:background="@drawable/button_shape_right"

        android:textColor="#FFFFFF"

        android:shadowColor="#B3B3B3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="50sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/StatusAboutSpacer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/StatusAboutSpacer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/AboutButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_about"
        android:id="@+id/AboutButton"

        android:background="@drawable/button_shape_right"

        android:textColor="#FFFFFF"

        android:shadowColor="#B3B3B3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="50sp"
        android:gravity="center_vertical|fill_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>